--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>
-      <!-- Write your name here! -->
+      <!-- Write your name here! --> Shruthi Ramireddy
     </h1>
   </body>
 </html>
